Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20066

Wrong value on instantly added column after DELETE and UPDATE

    XMLWordPrintable

Details

    Description

      Problem found during RQG testing on
      10.4.7 commit 61cc932781cae3864be8f964c3893cfc3f059ff6 2019-07-15
       
      Version: '10.4.7-MariaDB-debug-log'  socket: '/home/mleich/Server/10.4/bld_debug/mysql-test/var/tmp/mysqld.1.sock'  port: 16000  Source distribution
      2019-07-15 17:38:34 0x7f50803e8700  InnoDB: Assertion failure in file /home/mleich/Server/10.4/storage/innobase/row/row0ins.cc line 267
      InnoDB: Failing assertion: !cursor->index->is_committed()
      InnoDB: We intentionally generate a memory trap.
      ...
      mysys/stacktrace.c:269(my_print_stacktrace)[0x55826a12ba7d]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x13150)[0x7f508da59150]
      linux/raise.c:51(__GI_raise)[0x7f508cba60bb]
      stdlib/abort.c:92(__GI_abort)[0x7f508cba7f5d]
      /home/mleich/Server/10.4/bld_debug/sql/mysqld(+0xf8e65f)[0x55826a58865f]
      ut/ut0mem.cc:42(ut_strlcpy(char*, char const*, unsigned long))[0x55826a4a2189]
      row/row0ins.cc:268(row_ins_sec_index_entry_by_modify(unsigned long, unsigned long, btr_cur_t*, unsigned long**, mem_block_info_t*, mem_block_info_t*, dtuple_t const*, que_thr_t*, mtr_t*))[0x55826a4a9b6b]
      row/row0ins.cc:3133(row_ins_sec_index_entry_low(unsigned long, unsigned long, dict_index_t*, mem_block_info_t*, mem_block_info_t*, dtuple_t*, unsigned long, que_thr_t*, bool))[0x55826a4aa570]
      row/row0ins.cc:3352(row_ins_sec_index_entry(dict_index_t*, dtuple_t*, que_thr_t*, bool))[0x55826a5198f3]
      row/row0upd.cc:2516(row_upd_sec_index_entry(upd_node_t*, que_thr_t*))[0x55826a519ade]
      row/row0upd.cc:2543(row_upd_sec_step(upd_node_t*, que_thr_t*))[0x55826a51c4aa]
      row/row0upd.cc:3319(row_upd(upd_node_t*, que_thr_t*))[0x55826a51c811]
      row/row0upd.cc:3434(row_upd_step(que_thr_t*))[0x55826a4cbf36]
      row/row0mysql.cc:1890(row_update_for_mysql(row_prebuilt_t*))[0x55826a36570a]
      handler/ha_innodb.cc:8872(ha_innobase::update_row(unsigned char const*, unsigned char const*))[0x55826a140665]
      sql/handler.cc:6727(handler::ha_update_row(unsigned char const*, unsigned char const*))[0x558269efafcc]
      sql/sql_update.cc:1045(mysql_update(THD*, TABLE_LIST*, List<Item>&, List<Item>&, Item*, unsigned int, st_order*, unsigned long long, bool, unsigned long long*, unsigned long long*))[0x558269df61b7]
      sql/sql_parse.cc:4369(mysql_execute_command(THD*))[0x558269e02819]
      sql/sql_parse.cc:7908(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x558269deeaad]
      sql/sql_parse.cc:1842(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x558269ded1f2]
      sql/sql_parse.cc:1359(do_command(THD*))[0x558269f6620e]
      sql/sql_connect.cc:1404(do_handle_one_connection(CONNECT*))[0x558269f65f5d]
      sql/sql_connect.cc:1307(handle_one_connection)[0x55826a88f308]
      nptl/pthread_create.c:465(start_thread)[0x7f508da4d7fc]
      x86_64/clone.S:97(clone)[0x7f508cc83b5f]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x7f5018011440): UPDATE t3 SET col1 = 7 LIMIT 2
      Connection ID (thread ID): 13
      Status: NOT_KILLED
       
      No replay on
      10.3.11commit 07b1a26c33b28812a4fd8c814de0fe7d943bbd6b 2019-07-10
       
      Please note that virtual columns are not involved.
      

      Attachments

        1. prt
          83 kB
          Matthias Leich
        2. MDEV-20066.tgz
          3 kB
          Matthias Leich
        3. ml_MDEV-20066.test
          14 kB
          Marko Mäkelä
        4. MDEV-20066.yy
          2 kB
          Matthias Leich
        5. other_lock_MDEV-20066.test
          6 kB
          Marko Mäkelä
        6. mm_MDEV-20066.test
          6 kB
          Marko Mäkelä
        7. mmr_MDEV-20066.test
          6 kB
          Marko Mäkelä
        8. instrument_secondary_index.patch
          2 kB
          Marko Mäkelä
        9. btr-instr.patch
          5 kB
          Marko Mäkelä

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              mleich Matthias Leich
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: